# ai-dj

./: .env.example  .gitignore  README.md  agent.py  main.py  pyproject.toml  spotify_controller.py  voice.py
ai_dj/: config.py
src/ai_dj/: agent.py  config.py  spotify_controller.py  voice.py
src/client/: main.py
src/server/: main.py
src/telegram_bot/: main.py
src/tui/: main.py
